<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_logout">Logout</string>

    <string name="profile_welcome">Welcome</string>
    <string name="profile_signup_description">Please signup, to get access to more features</string>
    <string name="profile_signup">Signup</string>
    <string name="profile_error" />

    <string name="profile_item_manage">Manage your Horses</string>
    <string name="profile_item_manage_description">View/Edit/Delete your Horses</string>

    <string name="profile_item_upload">Upload</string>
    <string name="profile_item_upload_description">Add your own Horse to Giddy-app*</string>

    <string name="profile_item_matches">Favorite Horses</string>
    <string name="profile_item_matches_description">Summary of Horses you liked</string>

    <string name="profile_item_about">About</string>
    <string name="profile_item_about_description">About Giddy-App</string>

    <string name="profile_item_settings">Settings</string>
    <string name="profile_item_settings_description">Manage your personal settings</string>

    <string name="profile_item_error">Something went wrong</string>
    <string name="profile_item_error_description">Unable to load your profile</string>

    <string name="match_detail_1">Gender</string>
    <string name="match_detail_2">Type</string>
    <string name="match_detail_3">Price</string>
    <string name="match_detail_4">Area</string>
    <string name="match_detail_5">Likes</string>
</resources>